# MetAromatic

./: .TODO  .coveragerc  .gitignore  .pylintrc  Dockerfile  Generating  Installing  LICENSE.md  Makefile  MetAromatic.py  MetAromatic.spec  MetAromatic2.py  MetAromaticLegacy.py  README.md  README.txt  README_PYPI.md  VERSIONINFO.py  dispatcher.py  exporter.sh  met_aromatic.ini  multithreaded.py  noxfile.py  pip-selfcheck.json  pyproject.toml  pytest.ini  requirements.txt  runner.py  runner_click.py  runner_legacy.py  setup.py  test.py  version.py  versionhandler.py
API/: MetAromatic-OO.py
MetAromatic/: __init__.py  algorithm.py  aliases.py  batch.py  bridge.py  command_batch.py  command_bridge.py  command_pair.py  complex_types.py  consts.py  errors.py  get_aromatic_midpoints.py  get_batch.py  get_bridge.py  get_pair.py  interface.py  load_resources.py  lone_pair_interpolators.py  models.py  pair.py  requirements.txt  runner.py  test_batch.py  test_bridge.py  test_runner.py  test_runner_batch.py  test_runner_from_different_dirs.py  test_runner_pair.py  utils.py
dependencies/: EC_classifier.py  PDB_filegetter.py  methods.py
docs/: INSTALL_NOTES_FROM_v1.1.pages  MACOSX_APP_DEPLOY_NOTES_v1.4.pages
engine/: filegetter.py  get_commit_count.py  ma.py  utils.py
frontend/: README.md  frontend.py  version.py
legacy/: MetAromaticLegacy.py
metaromatic/: .gitignore  __init__.py  filegetter.py  linear_algebraic_helpers.py  ma3.py  runner.py  runner_helpers.py  version.py  versionhandler.py
src/: .test_cli.py.swp  conftest.py  consts.py  frontend.py  get_bridging_interactions.py  met_aromatic.conf  met_aromatic.py  parallel_processing.py  runner_click.py  single_processing.py  test_batch.py  test_bridges.py  test_cli.py  test_errors.py  test_get_bridging_interactions.py  test_met_aromatic.py  test_mongodb_output.py  test_parallel_processing.py  testing.py
test/: coverage.sh  test_bridges.py  test_cli.py  test_errors.py  test_met_aromatic.py  test_mongodb_output.py
tests/: README.txt  compare.py  conftest.py  expected_results_1rcy.json  run_test.sh  test_api_bridge.py  test_api_bridge_benchmark.py  test_bridge.py  (+21 more)
(+160 files in other folders)
