[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "MetAromatic"
version = "1.6.0"
authors = [{name="David Weber"}]
description = "MetAromatic algorithm"
readme = "README_PYPI.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
]
dependencies = [
    "click",
    "networkx",
    "numpy",
    "pydantic",
    "pymongo",
    "types-networkx",
    "typing_extensions",
]

[project.scripts]
runner = "MetAromatic.runner:cli"

[tool.setuptools.packages.find]
exclude = ["pngs*", "tests*"]
